--- a/README
+++ b/README
@@ -24,10 +24,13 @@ To this end I cut out or port to plain ANSI C the neccessary code and headers.
 To cause less confusion, I call this project (and files) csnappy.
 The work is not yet complete.
 The API is not finalized.
-The code has never been tested in kernel-space.
-The code has never been tested by me on any architecture other than x86-64.
+The code *has* been tested in kernel-space using a patched zram and it works.
+The code has AFAIK never been tested on any architecture other than x86-64.
 The userspace testers are a hack, as is the shared library.
 
 Someone wrote a perl wrapper for csnappy:
 http://search.cpan.org/dist/Compress-Snappy/
 https://github.com/gray/compress-snappy
+
+Patches to upstream snappy tester are coming soon.
+Patches to linux kernel are coming soon.
