--- a/TODO
+++ b/TODO
@@ -1,5 +1,7 @@
 * a bit better userspace makefile
 * run-time choice of compression algo in zram
-* rename CamelCase symbols to linux_style
+* rename CamelCase symbols to linux_style (?)
 * consider separating userspace definitions into a separate header
-* install something bigendian into a qemu image, make zram+snappy work there.
+* test on 32bit x86 qemu
+* test on non-x86 hardware
+* test on arm qemu
