--- a/TODO
+++ b/TODO
@@ -1,5 +1,4 @@
 * a bit better userspace makefile
-* run-time choice of compression algo in zram
 * rename CamelCase symbols to linux_style (?)
 * test on 32bit x86 qemu
 * test on non-x86 hardware
@@ -9,6 +8,7 @@
 	csnappy is butt slow.
 	Can Cortex A8 be emulated? Can install linux on such image?
 * test with debug kernel
+* test with modules linked in
 * consider hash functions with better performance on other arches.
 * consider hash table with say, 8, possible matches.
 * check what compression ratio, speed, memory use looks like if instead of
