--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+* test with debug config option
+* move snappy to staging directory (?)
 * a bit better userspace makefile
 * rename CamelCase symbols to linux_style (?)
 * test on 32bit x86 qemu
@@ -7,8 +9,6 @@
 	snappy's tester has fp exception,
 	csnappy is butt slow.
 	Can Cortex A8 be emulated? Can install linux on such image?
-* test with debug kernel
-* test with modules linked in
 * consider hash functions with better performance on other arches.
 * consider hash table with say, 8, possible matches.
 * check what compression ratio, speed, memory use looks like if instead of
